DTSPB-4434 Set dummy values (#3075)
* DTSPB-4341 spike set dummy/default value to bulkscan

* DTSPB-4341 fix test and checkstyle

* add new tab

* DTSPB-4434 added default to IHT forms

* DTSPB-4434 added default values to IHT forms

* DTSPB-4434 added default values to IHT forms

* DTSPB-4434 added default values to IHT forms

* DTSPB-4434 added default values to IHT forms

* DTSPB-4434 Fix check style

* DTSPB-4434 Fix check style

* DTSPB-4434 Fix test

* DTSPB-4517 Fix Mandatory fields

* DTSPB-4517 Fix unused import

* DTSPB-4517 Added logs

* DTSPB-4517 Pushed few changes

* DTSPB-4517 Check style

* DTSPB-4517 Added logs to debug

* DTSPB-4517 Fix object

* DTSPB-4517 Added warnings for more than one form selected

* DTSPB-4517 Fix check style

* DTSPB-4517 Added field in Configs

* DTSPB-4517 Added field in Configs

* DTSPB-4517 Added Log to check issue

* DTSPB-4517 Test field

* DTSPB-4517 Test field

* DTSPB-4434: Add primary applicant names to bs config

* DTSPB-4434: Remove final keyword on primary applicant names

* DTSPB-4434: Add default values for primary applicant names

* DTSPB-4434: Map default values (all non-IHT vars included)

* DTSPB-4434: Provide default values (all bar IHT)

* DTSPB-4434: Add modified fields to builder objects where functions need to be added (bar IHT)

* DTSPB-4434: Allow fields to be modified where needed

* DTSPB-4434: Generalise calls from erRequest

* DTSPB-4434: Add default values for blank ocrFields

* DTSPB-4434: Add generalised functions for calls from erRequest

* DTSPB-4434: Add generalised fields

* DTSPB-4434: Add generalised default values

* DTSPB-4434: Remove duplicate fields

* DTSPB-4434: Remove unused fields which are now generic

* DTSPB-4434: Change function names and make more of the calls generic

* DTSPB-4434: Change function names and make more of the calls generic

* DTSPB-4434: Remove unused fields which are now generic

* DTSPB-4434: Add test cases for each type of dummy value

* DTSPB-4434: Add 