@@ -14,6 +14,7 @@ import uk.gov.hmcts.probate.model.ccd.caveat.response.CaveatCallbackResponse;
 import uk.gov.hmcts.probate.model.exceptionrecord.CaseCreationDetails;
 import uk.gov.hmcts.probate.model.exceptionrecord.CaveatCaseUpdateRequest;
 import uk.gov.hmcts.probate.model.exceptionrecord.ExceptionRecordRequest;
+import uk.gov.hmcts.probate.model.exceptionrecord.ExceptionRecordOCRFields;
 import uk.gov.hmcts.probate.model.exceptionrecord.InputScannedDoc;
 import uk.gov.hmcts.probate.model.exceptionrecord.ResponseCaveatDetails;
 import uk.gov.hmcts.probate.model.exceptionrecord.SuccessfulCaveatUpdateResponse;
@@ -25,12 +26,15 @@ import uk.gov.hmcts.probate.service.exceptionrecord.mapper.ExceptionRecordCaveat
 import uk.gov.hmcts.probate.service.exceptionrecord.mapper.ExceptionRecordGrantOfRepresentationMapper;
 import uk.gov.hmcts.probate.service.exceptionrecord.mapper.ScannedDocumentMapper;
 import uk.gov.hmcts.probate.service.exceptionrecord.utils.ExceptionRecordCaseDataValidator;
+import uk.gov.hmcts.probate.service.ocr.OCRFieldModifierUtils;
 import uk.gov.hmcts.probate.transformer.CallbackResponseTransformer;
 import uk.gov.hmcts.probate.transformer.CaveatCallbackResponseTransformer;
 import uk.gov.hmcts.probate.validator.CaveatsExpiryValidationRule;
+import uk.gov.hmcts.reform.probate.model.cases.CollectionMember;
 import uk.gov.hmcts.reform.probate.model.cases.caveat.CaveatData;
 import uk.gov.hmcts.reform.probate.model.cases.grantofrepresentation.GrantOfRepresentationData;
 import uk.gov.hmcts.reform.probate.model.cases.grantofrepresentation.GrantType;
+import uk.gov.hmcts.reform.probate.model.cases.grantofrepresentation.ModifiedOCRField;
 
 import java.time.LocalDate;
 import java.util.ArrayList;
@@ -38,7 +42,6 @@ import java.util.HashMap;
 import java.util.List;
 import java.util.concurrent.atomic.AtomicBoolean;
 
-import static java.util.stream.Collectors.toList;
 import static uk.gov.hmcts.probate.model.Constants.CAVEAT_EXPIRY_EXTENSION_PERIOD_IN_MONTHS;
 import static uk.gov.hmcts.reform.probate.model.cases.ApplicationType.SOLICITORS;
 import static uk.gov.hmcts.reform.probate.model.cases.grantofrepresentation.SolicitorWillType.GRANT_TYPE_ADMON;
@@ -73,6 +76,9 @@ public class ExceptionRecordService {
     @Autowired
     CallbackResponseTransformer grantOfRepresentationTransformer;
 
+    @Autowired
+    OCRFieldModifierUtils ocrFieldModifierUtils;
+
     public SuccessfulTransformationResponse createCaveatCaseFromExceptionRecord(
         ExceptionRecordRequest erRequest,
         List<String> warnings) {
@@ -81,7 +87,9 @@ public class ExceptionRecordService {
 
         try {
             log.info("About to map Caveat OCR fields to CCD for case: {}", erRequest.getExceptionRecordId());
-            CaveatData caveatData = erCaveatMapper.toCcdData(erRequest.getOCRFieldsObject());
+            ExceptionRecordOCRFields exceptionRecordOCRFields = erRequest.getOCRFieldsObject();
+
+            CaveatData caveatData = erCaveatMapper.toCcdData(exceptionRecordOCRFields);
 
             // Add bulkScanReferenceId
             caveatData.setBulkScanCaseReference(erRequest.getExceptionRecordId());
@@ -93,7 +101,7 @@ public class ExceptionRecordService {
             caveatData.setScannedDocuments(erRequest.getScannedDocuments()
                 .stream()
                 .map(it -> documentMapper.toCaseDoc(it, erRequest.getExceptionRecordId()))
-                .collect(toList()));
+                .toList());
 
             caveatData.setApplicationSubmittedDate(erRequest.getDeliveryDate().toLocalDate());
             log.info("Calling caveatTransformer to create transformation response for bulk scan orchestrator.");
@@ -119,10 +127,24 @@ public class ExceptionRecordService {
         try {
             log.info("About to map Grant of Representation OCR fields to CCD for case: {}",
                     erRequest.getExceptionRecordId());
+
+            ExceptionRecordOCRFields exceptionRecordOCRFields = erRequest.getOCRFieldsObject();
+
+            List<CollectionMember<ModifiedOCRField>> modifiedFields = ocrFieldModifierUtils
+                    .setDefaultGorValues(exceptionRecordOCRFields, grantType);
+
+            List<CollectionMember<String>> autoCaseWarnings = ocrFieldModifierUtils
+                    .checkWarnings(exceptionRecordOCRFields);
+
+            log.info("AutoCaseWarnings: {}", autoCaseWarnings);
             GrantOfRepresentationData grantOfRepresentationData =
-                    erGrantOfRepresentationMapper.toCcdData(erRequest.getOCRFieldsObject(), grantType);
+                    erGrantOfRepresentationMapper.toCcdData(exceptionRecordOCRFields, grantType);
 
             ExceptionRecordCaseDataValidator.validateIhtValues(grantOfRepresentationData);
+
+            grantOfRepresentationData.setModifiedOCRFieldList(modifiedFields);
+
+            grantOfRepresentationData.setAutoCaseWarnings(autoCaseWarnings);
 
             // Add bulkScanReferenceId
             grantOfRepresentationData.setBulkScanCaseReference(erRequest.getExceptionRecordId());
